// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quark render \`style\` attribute 1`] = `
<DocumentFragment>
  <div
    data-component="div"
    style="color: red;"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Quark render attributes 1`] = `
<DocumentFragment>
  <div
    class="satori"
    data-component="div"
    id="foo"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Quark render with \`_css\` prop 1`] = `
<DocumentFragment>
  <div
    class="_hwfcu5"
    data-component="div"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Quark render with \`css\` prop 1`] = `
<DocumentFragment>
  <div
    class="_hwfcu5"
    data-component="div"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Quark render with \`wrapElement\` prop 1`] = `
<DocumentFragment>
  <a
    data-component="a"
  >
    <div
      data-component="div"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Quark render with baseStyle 1`] = `
<DocumentFragment>
  <div
    class="_hwfcu5"
    data-component="div"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Quark render with merged className 1`] = `
<DocumentFragment>
  <div
    class="satori _hwfcu5"
    data-component="div"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Quark renders 1`] = `
<DocumentFragment>
  <div
    data-component="div"
  >
    Hello
  </div>
</DocumentFragment>
`;
